--- a/styles.css
+++ b/styles.css
@@ -9,29 +9,66 @@ html,body {
     
 }
 
+p, legend {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1em;
+}
 
+label {
+    font-family: 'Roboto', sans-serif;
+    color: #676767;
+    font-size: 11px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+td {
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+
+input {
+    border: 1px solid #E5E7EB;
+    border-radius: 5px;
+    height: 18px;
+    width: 180px;
+}
+
+warning {
+    border: 1px solid red !important;
+}
+
+input:focus {
+    outline-color: black;
+    box-shadow: 3px 5px 10px #E5E7EB;
+}
+
+fieldset {
+    border: 0;
+}
 
 #grid-container {
     height: 100vh;
     margin: 0;
     display: grid;
-    grid-template-columns: auto;
+    grid-template-columns: auto auto auto auto;
 }
 
 .left {
-    grid-column-start: 1;
-    grid-column-end: 1;
-    grid-row-start: 1;
-    grid-row-end: 3;
+
+width: 500px;
     background-image: url("./images/background.jpg");
     background-size:cover;
 }
 
 .main {
-    grid-column-start: 2;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
 }
 
 .logo-container {
@@ -42,6 +79,7 @@ html,body {
     padding-bottom: 10px;
     background-color: rgba(0,0,0,0.7);
     display: flex;
+
     align-items: center;
 justify-content: center;
 }
@@ -59,4 +97,45 @@ display: inline-flex;
 .logo-name {
     color: white;
     font-size: 5em;
+}
+
+.signup, .description {
+    width: 100%;
+    min-width: 800px;
+}
+
+.description {
+    margin-bottom: 30px;
+    width: 75%;
+}
+
+.description p:first-of-type{
+    margin-bottom: 50px;
+}
+
+.signup {
+    box-shadow: 4px 4px 4px 2px rgb(195, 195, 195);
+    margin: 0;
+    width: 100%;
+}
+fieldset {
+    margin: 50px 0px 50px 50px;
+}
+.pass-warning {
+    display: none;
+    color: red;
+    position: absolute;
+}
+
+#submit, .login {
+    margin-left: 50px;
+}
+
+#submit {
+    background-color: rgb(70, 91, 70);
+    color: white;
+    height: 40px;
+    border-radius: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
